--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ ul{
     margin-right: 150px;
 }
 body{
-    background:url("/assets/img/intersection.png")
+    background:url("assets/img/intersection.png")
 }
 .row{
     background-color: white;
