--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,8 @@ ul{
     margin-right: 150px;
 }
 body{
-    background:url("assets/img/intersection.png")
+    background-color: #f3eff9;
+background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h20v20H0V0zm10 17a7 7 0 1 0 0-14 7 7 0 0 0 0 14zm20 0a7 7 0 1 0 0-14 7 7 0 0 0 0 14zM10 37a7 7 0 1 0 0-14 7 7 0 0 0 0 14zm10-17h20v20H20V20zm10 17a7 7 0 1 0 0-14 7 7 0 0 0 0 14z' fill='%23a4e3f7' fill-opacity='0.19' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 .row{
     background-color: white;
